// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddTopic failure createTopic: GraphQL error 1`] = `
<div>
  <div
    class="sc-bdvvaa hMSAon"
  >
    <h1>
      Add Topic
    </h1>
    <div>
      Error: $
      {"graphQLErrors":[{"message":"CreateTopicMutation: GraphQL error"}],"networkError":null,"message":"CreateTopicMutation: GraphQL error"}
    </div>
    <form
      class="sc-gsDJrp idIFaR"
    >
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="groupLabel"
        >
          Group
        </label>
        <select
          aria-labelledby="groupLabel"
          class="form-control form-control-lg"
          id="group"
        >
          <option
            selected=""
            value="40"
          >
            Blue Blaze Irregulars
          </option>
        </select>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="topicLabel"
        >
          Topic
        </label>
        <input
          aria-labelledby="topicLabel"
          class="form-control form-control-lg"
          id="topic"
          value="A Really Great Topic"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="descriptionLabel"
        >
          Description
        </label>
        <input
          aria-labelledby="descriptionLabel"
          class="form-control form-control-lg"
          id="description"
          value="A really great topic description for a really great topic."
        />
      </div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit Topic
      </button>
    </form>
    <div
      class="sc-dkPtyc cWQCqc"
    />
  </div>
</div>
`;

exports[`AddTopic failure createTopic: network error 1`] = `
<div>
  <div
    class="sc-bdvvaa hMSAon"
  >
    <h1>
      Add Topic
    </h1>
    <div>
      Error: $
      {"graphQLErrors":[],"networkError":{},"message":"CreateTopicMutation: network error"}
    </div>
    <form
      class="sc-gsDJrp idIFaR"
    >
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="groupLabel"
        >
          Group
        </label>
        <select
          aria-labelledby="groupLabel"
          class="form-control form-control-lg"
          id="group"
        >
          <option
            selected=""
            value="40"
          >
            Blue Blaze Irregulars
          </option>
        </select>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="topicLabel"
        >
          Topic
        </label>
        <input
          aria-labelledby="topicLabel"
          class="form-control form-control-lg"
          id="topic"
          value="A Really Great Topic"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="descriptionLabel"
        >
          Description
        </label>
        <input
          aria-labelledby="descriptionLabel"
          class="form-control form-control-lg"
          id="description"
          value="A really great topic description for a really great topic."
        />
      </div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit Topic
      </button>
    </form>
    <div
      class="sc-dkPtyc cWQCqc"
    />
  </div>
</div>
`;

exports[`AddTopic standard snapshots fresh load 1`] = `
<div>
  <div
    class="sc-bdvvaa hMSAon"
  >
    <h1>
      Add Topic
    </h1>
    <form
      class="sc-gsDJrp idIFaR"
    >
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="groupLabel"
        >
          Group
        </label>
        <select
          aria-labelledby="groupLabel"
          class="form-control form-control-lg"
          id="group"
        >
          <option
            selected=""
            value="40"
          >
            Blue Blaze Irregulars
          </option>
        </select>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="topicLabel"
        >
          Topic
        </label>
        <input
          aria-labelledby="topicLabel"
          class="form-control form-control-lg"
          id="topic"
          value=""
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="descriptionLabel"
        >
          Description
        </label>
        <input
          aria-labelledby="descriptionLabel"
          class="form-control form-control-lg"
          id="description"
          value=""
        />
      </div>
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        Submit Topic
      </button>
    </form>
    <div
      class="sc-dkPtyc cWQCqc"
    />
  </div>
</div>
`;

exports[`AddTopic standard snapshots invalid parameters 1`] = `
<div>
  <div
    class="sc-bdvvaa hMSAon"
  >
    <h1>
      Add Topic
    </h1>
    <form
      class="sc-gsDJrp idIFaR"
    >
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="groupLabel"
        >
          Group
        </label>
        <select
          aria-labelledby="groupLabel"
          class="form-control form-control-lg"
          id="group"
        >
          <option
            selected=""
            value="40"
          >
            Blue Blaze Irregulars
          </option>
        </select>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="topicLabel"
        >
          Topic
        </label>
        <input
          aria-labelledby="topicLabel"
          class="form-control form-control-lg"
          id="topic"
          value=""
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="descriptionLabel"
        >
          Description
        </label>
        <input
          aria-labelledby="descriptionLabel"
          class="form-control form-control-lg"
          id="description"
          value=""
        />
      </div>
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        Submit Topic
      </button>
    </form>
    <div
      class="sc-dkPtyc cWQCqc"
    />
  </div>
</div>
`;

exports[`AddTopic standard snapshots valid parameters 1`] = `
<div>
  <div
    class="sc-bdvvaa hMSAon"
  >
    <h1>
      Add Topic
    </h1>
    <form
      class="sc-gsDJrp idIFaR"
    >
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="groupLabel"
        >
          Group
        </label>
        <select
          aria-labelledby="groupLabel"
          class="form-control form-control-lg"
          id="group"
        >
          <option
            selected=""
            value="40"
          >
            Blue Blaze Irregulars
          </option>
        </select>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="topicLabel"
        >
          Topic
        </label>
        <input
          aria-labelledby="topicLabel"
          class="form-control form-control-lg"
          id="topic"
          value="A Really Great Topic"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="descriptionLabel"
        >
          Description
        </label>
        <input
          aria-labelledby="descriptionLabel"
          class="form-control form-control-lg"
          id="description"
          value="A really great topic description for a really great topic."
        />
      </div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit Topic
      </button>
    </form>
    <div
      class="sc-dkPtyc cWQCqc"
    />
  </div>
</div>
`;

exports[`AddTopic success with groups should create a topic and navigate to the topics page 1`] = `
<div>
  <div
    class="sc-bdvvaa hMSAon"
  >
    <h1>
      Add Topic
    </h1>
    <form
      class="sc-gsDJrp idIFaR"
    >
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="groupLabel"
        >
          Group
        </label>
        <select
          aria-labelledby="groupLabel"
          class="form-control form-control-lg"
          id="group"
        >
          <option
            selected=""
            value="40"
          >
            Blue Blaze Irregulars
          </option>
        </select>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="topicLabel"
        >
          Topic
        </label>
        <input
          aria-labelledby="topicLabel"
          class="form-control form-control-lg"
          id="topic"
          value="A Really Great Topic"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="descriptionLabel"
        >
          Description
        </label>
        <input
          aria-labelledby="descriptionLabel"
          class="form-control form-control-lg"
          id="description"
          value="A really great topic description for a really great topic."
        />
      </div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit Topic
      </button>
    </form>
    <div
      class="sc-dkPtyc cWQCqc"
    />
  </div>
</div>
`;

exports[`AddTopic success without groups should show a helpful message 1`] = `
<div>
  <div>
    You must join a group to add topics.
  </div>
</div>
`;
